changes in hello-world file by person 1

--- a/hello-world.html
+++ b/hello-world.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <hr>
+    <p>Person 1 updated this code.</p>
+    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, quam nisi? Doloremque et voluptatibus, ad magnam, commodi ratione necessitatibus rem officia veniam provident aspernatur aperiam quidem suscipit temporibus, itaque minima.</span>
 </body>
 </html>
