--- a/hello-world.html
+++ b/hello-world.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <hr>
+    <p>Person 2 updated this code</p>
+    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio eos quae, aperiam saepe ipsa error, earum commodi officia illo placeat doloribus porro fugit pariatur corrupti repellat, alias natus iure blanditiis.</span>
+
+    <img src="../../../../../../../../../../" alt>
+    <p>Hi</p>
 </body>
 </html>
