New lines added by Khurram

--- a/hello-world.html
+++ b/hello-world.html
@@ -19,5 +19,8 @@
     
     <p>Person 1 updated this code.</p>
     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, quam nisi? Doloremque et voluptatibus, ad magnam, commodi ratione necessitatibus rem officia veniam provident aspernatur aperiam quidem suscipit temporibus, itaque minima.</span>
+
+    <p>Khurram updated this code.</p>
+    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, quam nisi? Doloremque et voluptatibus, ad magnam, commodi ratione necessitatibus rem officia veniam provident aspernatur aperiam quidem suscipit temporibus, itaque minima.</span>
 </body>
 </html>
