--- a/index.html
+++ b/index.html
@@ -4805,8 +4805,8 @@ if 2 or more persons working on a same repo in same file. Auto-Merge failed in t
     </h2>
     <ul>
       <li class="has-line-data" data-line-start="69" data-line-end="70">
-        <a href="https://mega.nz/folder/N3k0iS5a#PU-jd1KXXoVFh9R2rh4VAA"
-          >https://mega.nz/folder/N3k0iS5a#PU-jd1KXXoVFh9R2rh4VAA</a
+        <a href="https://www.youtube.com/watch?v=qeXnsqbzBCU&ab_channel=Codanics"
+          >https://www.youtube.com/watch?v=qeXnsqbzBCU&ab_channel=Codanics</a
         >
       </li>
     </ul>
